# elia-hackathon-reflex

./: README.md  dummy_data.json  pyproject.toml  rxconfig.py
a_dplbckbgen_polaris_hackathon_reflex/: a_dplbckbgen_polaris_hackathon_reflex.py
a_dplbckbgen_polaris_hackathon_reflex/backend/: backend.py  job.py
a_dplbckbgen_polaris_hackathon_reflex/components/: stats_selector.py
a_dplbckbgen_polaris_hackathon_reflex/views/: navbar.py
a_dplbckbgen_polaris_hackathon_reflex/views/data_product/: container.py  stats.py  table.py
a_dplbckbgen_polaris_hackathon_reflex/views/download/: container.py
a_dplbckbgen_polaris_hackathon_reflex/views/search_data/: container.py
