[tool.poetry]
name = "a-dplbckbgen-polaris-hackathon-reflex"
version = "0.1.0"
description = ""
authors = ["Team Polaris"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.7.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
