[tool.poetry]
name = "a-dplbckbgen-polaris-hackathon-reflex"
version = "0.1.0"
description = ""
authors = ["Team Polaris"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.7.0"
pandas = "^2.2.3"
reflex-chakra = "^0.6.3"
reflex-ag-grid = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
